objects/Code_Component__c.object
<CustomObject>
    <fields>
        <fullName>Design_Documentation__c</fullName>
        <label>Design Documentation</label>
        <referenceTo>Design_Documentation__c</referenceTo>
        <relationshipLabel>Code Components</relationshipLabel>
        <relationshipName>Code_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sudo_Code__c</fullName>
        <label>Sudo Code</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Criteria Based Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Account Owner Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Analytic Snapshot</fullName>
                </value>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
                <value>
                    <fullName>Apex Sharing Reason</fullName>
                </value>
                <value>
                    <fullName>Apex Trigger</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Assignment Rule</fullName>
                </value>
                <value>
                    <fullName>Auth. Provider</fullName>
                </value>
                <value>
                    <fullName>Auto-Response Rule</fullName>
                </value>
                <value>
                    <fullName>Button or Link</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Campaign Criteria Based Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Campaign Owner Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Case Criteria Based Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Case Owner Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Compact Layout</fullName>
                </value>
                <value>
                    <fullName>Contact Criteria Based Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Contact Owner Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Custom Console Component</fullName>
                </value>
                <value>
                    <fullName>Custom Field</fullName>
                </value>
                <value>
                    <fullName>Custom Label</fullName>
                </value>
                <value>
                    <fullName>Custom Object</fullName>
                </value>
                <value>
                    <fullName>Custom Object Criteria Based Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Custom Object Owner Sharing Rule</fullName>
                </value>
                <value>
                    <fullName>Custom Report Type</fullName>
                </value>
                <value>
                    <fullName>Custom Setting</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Code Component</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>